alignment fixed

--- a/common.css
+++ b/common.css
@@ -242,6 +242,49 @@ nav ul li a:not(#chat):hover:after {
     top: 0;
 }
 
+/* SUBTITLES */
+.subtitle {
+    font-size: var(--subtitle-size);
+    margin: 0px auto;
+    text-align: center;
+    text-transform: uppercase;
+    position: relative;
+    max-width: 300px;
+}
+
+.subtitle_inner {
+    color: var(--subtitle-colour);
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    font-size: var(--under-subtitle-size);
+    position: relative;
+    max-width: 300px;
+    margin-bottom: 40px;
+}
+
+.subtitle:before,
+.subtitle_inner:after {
+    width: 30px;
+    height: 30px;
+    content: '';
+    position: absolute;
+}
+
+.subtitle:before {
+    border-top: 1px solid black;
+    border-left: 1px solid black;
+    top: -7px;
+    left: -13px;
+}
+
+.subtitle_inner:after {
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+    bottom: -7px;
+    right: -13px;
+}
+
 /* FOOTER */
 /* THIRD CONTAINER */
 .container h3 {
