--- a/subpage.css
+++ b/subpage.css
@@ -1,5 +1,4 @@
 main {
-    text-align: center;
     background: rgb(49, 67, 100);
     background: radial-gradient(circle, rgba(49, 67, 100, 1) 0%, rgba(14, 13, 30, 1) 50%);
     background-repeat: no-repeat;
@@ -10,6 +9,10 @@ main {
     align-items: center;
     position: relative;
     overflow: hidden;
+}
+
+h1 {
+    text-align: center;
 }
 
 .background_shapes {
@@ -64,7 +67,7 @@ main {
     color: white;
 }
 
-.description h2 {
+.description h1 {
     text-transform: uppercase;
     font-size: 40px;
     margin: 0;
@@ -82,13 +85,12 @@ p {
 }
 
 .details>div {
-    text-align: center;
-    width: 250px;
     margin: 20px;
 }
 
-.details h3 {
+.details h2 {
     margin: 0;
+    font-size: 20px;
 }
 
 .project {
@@ -107,6 +109,8 @@ p {
     margin-bottom: 20px;
 }
 
+/* PROJECT */
+
 @media (min-width: 800px) {
     .details>div {
         padding: 40px;
@@ -115,5 +119,9 @@ p {
     .project_inner {
         max-width: 900px;
         margin: auto;
+    }
+
+    .details>div {
+        width: 260px;
     }
 }
